# plaits-vst

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: _config.yml  index.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
src/dsp/: voice.h
src/dsp/plaits/: user_data.h
src/dsp/stmlib/: stmlib.h
test/dsp/: EnvelopeTests.cpp  LfoTests.cpp  ModEnvelopeTests.cpp  ModulationMatrixTests.cpp  MoogFilterTests.cpp  PlaitsEngineTests.cpp  ResamplerTests.cpp  VoiceAllocatorTests.cpp  VoiceTests.cpp
